# WeaklyCoupledFoHydro

./: CMakeLists.txt  do-cmake-template.sh  input_coupling.yaml  input_fo_forward.yaml  input_fo_inverse.yaml  input_hydro_inverse.yaml  main.cpp
